# chimera-rs

./: .gitignore  Cargo.toml  README.md  SYNTAX.md  build.rs  chimera.vim  core.chi  core.wo  woland.vim  wrapper.h  x.py
common/src/: ast.rs  lib.rs
docs/: building.md  spec.md
examples/: fizzbuzz.wo  greet.wo  hello.wo  life.wo  misc.wo  perf.wo  primes.wo  rule110.chi  rule110.wo  simple_main.chi  stress.wo  types.wo
interpreter/: Cargo.toml
interpreter/src/: lib.rs
parser/: Cargo.toml  build.rs
parser/src/: grammar.lalrpop  grammar.rs  lexer.rs  lib.rs
src/: ast.rs  attribute.rs  code.rs  codegen.rs  compiler.rs  core.wo  error.rs  grammar.lalrpop  interpreter.rs  lexer.rs  main.rs  parser.rs  typechecker.rs  typeck.rs  value.rs  woland.rs
src/check/: cst.rs  mod.rs
src/codegen/: cranelift.rs
src/compiler/: ccf.rs  fcf.rs  mod.rs  ssa.rs
src/core/: io.wo
src/interpreter/: attribute.rs  code.rs  mod.rs  value.rs
src/mlir/: attribute.rs  block.rs  mod.rs  operation.rs  region.rs  types.rs  value.rs
src/parser/: ast.rs  cst.rs  grammar.lalrpop  lexer.rs  mod.rs
typechecker/: Cargo.toml
typechecker/src/: error.rs  lib.rs
