[package]
name = "chimera"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.35"
thiserror = "1.0.30"
fnv = "1.0.3"
lalrpop-util = "0.19.6"
phf = { version = "0.10.0", features = ["macros"] }
annotate-snippets = "0.9.1"
polytype = { version = "6.2.1", default-features = false }

[build-dependencies]
lalrpop = "0.19.6"
cmake = "0.1.48"
bindgen = "0.59.2"
